--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
 .App {
+  background-image: linear-gradient(
+    to top,
+    #fdcbf1 0%,
+    #fdcbf1 1%,
+    #e6dee9 100%
+  );
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  min-height: 100vh;
   text-align: center;
 }
 
@@ -7,15 +17,7 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +26,15 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header-buttons {
+  padding: 3%;
+  border: none;
+  background: none;
+  outline: none;
+  font-size: 25px;
+  color: purple;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tea-toppings-buttons {
+  color: blue;
 }
