--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,5 @@
 .App {
-  background-image: linear-gradient(
-    to top,
-    #fdcbf1 0%,
-    #fdcbf1 1%,
-    #e6dee9 100%
-  );
+  background-image: linear-gradient(to top, #7028e4 0%, #e5b2ca 100%);
   margin: 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -23,18 +18,38 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: #fea8ff;
+  color: #853df9;
+}
+
+.Subheaders {
+  color: #fabdfc;
 }
 
 .header-buttons {
-  padding: 3%;
-  border: none;
-  background: none;
-  outline: none;
-  font-size: 25px;
-  color: purple;
+  box-shadow: inset 0px 1px 0px 0px #e184f3;
+  background: linear-gradient(to bottom, #c123de 5%, #a20dbd 100%);
+  background-color: #c123de;
+  border-radius: 6px;
+  border: 1px solid #a511c0;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #9b14b3;
+}
+.header-buttons:hover {
+  background: linear-gradient(to bottom, #a20dbd 5%, #c123de 100%);
+  background-color: #a20dbd;
+}
+.header-buttons:active {
+  position: relative;
+  top: 1px;
 }
 
-.tea-toppings-buttons {
-  color: blue;
+.customers-order {
+  color: #fabdfc;
 }
